--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,7 @@ youtube_username: globalmtb
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-I am currently a Robotics Researcher in Computer Vision for underwater robots.
-
-During my Ph.D. I worked on Signal Processing for Acoustic Localisation at Heriot-Watt 
+I am currently a Robotics Researcher in Computer Vision for underwater robots. During my Ph.D. I worked on Signal Processing for Acoustic Localisation at Heriot-Watt 
 University. I obtained my Master's degree in Computer Vision and Robotics from an Erasmus 
 Mundus Master Programm called ViBot, awarded by University of Burgundy, University of Girona 
 and Heriot-Watt University and my Bachelor's degree in computer science from Universidad del 
