--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,10 @@ youtube_username: globalmtb
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I am currently a robotics researcher at Heriot-Watt.
+  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
-  I obtained my PhD from Heriot-Watt.
+  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+
 # Projects Section
 # projects_title: Projects
 
