--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,11 @@ youtube_username: globalmtb
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/me.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  I am currently a robotics researcher at Heriot-Watt.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
-
+  I obtained my PhD from Heriot-Watt.
 # Projects Section
 # projects_title: Projects
 
