--- a/_config.yml
+++ b/_config.yml
@@ -43,16 +43,16 @@ more_content: | # this will include new lines to allow paragraphs
   *Jan. 2020:* I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/).
   *Nov. 2019:* Sucessfully defended my thesis.
 
-# More Section
-more_title: Timeline
-more_content: | # this will include new lines to allow paragraphs
-  2019 - Present: Research Associate at ORCAHub.
+# # More Section
+# more_title: Timeline
+# more_content: | # this will include new lines to allow paragraphs
+#   2019 - Present: Research Associate at ORCAHub.
 
-more_title: Publications
-more_content: | # this will include new lines to allow paragraphs
-  *Conferences*
+# more_title: Publications
+# more_content: | # this will include new lines to allow paragraphs
+#   *Conferences*
 
-  *Theses*
+#   *Theses*
 
 # Footer
 footer_show_references: true
