--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ more_content: | # this will include new lines to allow paragraphs
 footer_show_references: true
 
 # Build settings
-remote_theme: evargasv/resume-theme
+remote_theme: sproogen/resume-theme
 
 sass:
   sass_dir: _sass
