--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ more_title: News
 more_content: | # this will include new lines to allow paragraphs
   - **Jan. 2020:** I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/).
   - **Nov. 2019:** Sucessfully defended my thesis.
+  - **Jan. 2019:** Started working for ORCA.
 
 # # More Section
 # more_title: Timeline
