Configuration file modified

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ linkedin_username: evargasv
 # about_title: About Me
 about_profile_image: images/me.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I am currently a robotics researcher at Heriot-Watt.
+  I am currently a robotics researcher at Heriot-Watt University.
 
   I obtained my PhD from Heriot-Watt.
 
