--- a/_config.yml
+++ b/_config.yml
@@ -26,14 +26,7 @@ about_profile_image: images/me.jpg
 about_content: | # this will include new lines to allow paragraphs
   I am currently a robotics researcher at Heriot-Watt University.
 
-  I obtained my PhD from Heriot-Watt.
-
-# News Section
-more_title: News
-more_content: | # this will include new lines to allow paragraphs
-  - **Jan. 2020:** I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/).
-  - **Nov. 2019:** Sucessfully defended my thesis.
-  - **Jan. 2019:** Started working for ORCA.
+  I obtained my PhD from Heriot-Watt University.
 
 # Timeline Section
 experience_title: Timeline
@@ -50,6 +43,13 @@ projects_content: | # this will include new lines to allow paragraphs
   **Theses**
 
   - PhD thesis
+
+# News Section
+more_title: News
+more_content: | # this will include new lines to allow paragraphs
+  - **Jan. 2020:** I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/).
+  - **Nov. 2019:** Sucessfully defended my thesis.
+  - **Jan. 2019:** Started working for ORCA.
 
 # Footer
 footer_show_references: true
