--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ about_content: | # this will include new lines to allow paragraphs
   I am currently a robotics researcher at Heriot-Watt University.
 
   I obtained my PhD from Heriot-Watt University.
-  
+
 # Publications Section
 projects_title: Publications
 projects_content: | # this will include new lines to allow paragraphs
@@ -42,13 +42,13 @@ projects_content: | # this will include new lines to allow paragraphs
 # Timeline Section
 experience_title: Timeline
 experience_content: | # this will include new lines to allow paragraphs
-  - **2019 - Present:** Research Associate at ORCAHub.
+  - **2019 - Present:** Research Associate at ORCA.
 
 # News Section
 more_title: News
 more_content: | # this will include new lines to allow paragraphs
   - **Jan. 2020:** I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/).
-  - **Nov. 2019:** Sucessfully defended my thesis.
+  - **Nov. 2019:** Sucessfully defended my PhD thesis.
   - **Jan. 2019:** Started working for ORCA.
 
 # Footer
