--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,14 @@ projects_content: | # this will include new lines to allow paragraphs
 # Timeline Section
 experience_title: Timeline
 experience_content: | # this will include new lines to allow paragraphs
-  - **2019 - Present:** Research Associate at ORCA.
+  - **2019 - Present:** Research Associate. [ORCAHub](https://orcahub.org/).
+  - **2015 - 2019:** PhD Signal Processing. Heriot-Watt University. Advisors: Keith Brown and Kartic Subr.  
+  - **2013 - 2015:** MSc Computer Vision and Robotics. Erasmus Mundus Master Program in Computer Vision and Robotics (ViBot).
+  - **Summer 2015:** Research Intern. Toshiba Medical Visualization Systems. Advisor: 
+  - **2006 - 2012:** BSc in Computer Science. Universidad del Valle. Advisor: 
+  - **Spring 2012:** Innovation Camp Participant. Siemens Healthcare. 
+  - **Spring 2011:** Research Intern. Philips. Advisor: 
+  - **2010 - 2011:** BSc Exchange Student. Friedrich-Alexander-Universitat Erlangen-Nurnberg. 
 
 # News Section
 more_title: News
