--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,11 @@ about_content: | # this will include new lines to allow paragraphs
 # Publications Section
 projects_title: Publications
 projects_content: | # this will include new lines to allow paragraphs
-  ##Conferences
+  **Conferences**
 
   - EUSIPCO
 
-  ##Theses
+  **Theses**
 
   - PhD thesis
 
