--- a/_config.yml
+++ b/_config.yml
@@ -28,17 +28,14 @@ about_content: | # this will include new lines to allow paragraphs
 
   I obtained my PhD from Heriot-Watt University.
 
-# Publications Section
-projects_title: Publications
-projects_content: | # this will include new lines to allow paragraphs
-
-  <h3>Conferences<h3>
-
-  - EUSIPCO
-
-  **Theses**
-
-  - PhD thesis
+# News Section
+more_title: News
+more_content: | # this will include new lines to allow paragraphs
+  - **Jan. 2020:** Our abstract was accepted to [OCEANS](https://singapore20.oceansconference.org/).
+  - **Jan. 2020:** I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/).
+  - **Nov. 2019:** Sucessfully defended my PhD thesis. 
+  - **Oct. 2019:** ORCA Demos.
+  - **Jan. 2019:** Started working for ORCA.
 
 # Timeline Section
 experience_title: Timeline
@@ -53,12 +50,17 @@ experience_content: | # this will include new lines to allow paragraphs
   - **Spring 2011:** Research Intern. Philips. Advisor: 
   - **2010 - 2011:** BSc Exchange Student. Friedrich-Alexander-Universitat Erlangen-Nurnberg. 
 
-# News Section
-more_title: News
-more_content: | # this will include new lines to allow paragraphs
-  - **Jan. 2020:** I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/).
-  - **Nov. 2019:** Sucessfully defended my PhD thesis.
-  - **Jan. 2019:** Started working for ORCA.
+# Publications Section
+projects_title: Publications
+projects_content: | # this will include new lines to allow paragraphs
+
+  **Conferences**
+
+  - EUSIPCO
+
+  **Theses**
+
+  - PhD thesis
 
 # Footer
 footer_show_references: true
