--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,11 @@ email: elizabeth.vargas@hw.ac.uk
 # about_title: About Me
 about_profile_image: images/me.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I am currently a Research Associate at [ORCA Hub](https://orcahub.org/) working on computer vision for underwater robots. I obtained my PhD in Signal Processing from Heriot-Watt University. I obtained my Master's degree in 
-  Computer Vision and Robotics from an Erasmus Mundus Master Programm called ViBot, awarded by University of Burgundy, University of Girona and Heriot-Watt University and my Bachelor's degree in computer 
-  science from Universidad del Valle. During my studies, I have also spent time as a summer intern at Toshiba Medical Visualization Systems (Jun - Sep 2015), innovation camp participant at Siemens Healthcare 
-  GmbH (Feb - Apr 2012) and research intern at Philips Technology GmbH Research Laboratories (Mar - Jul 2011).
+  I am currently a Research Associate at [ORCA Hub](https://orcahub.org/) working on computer vision for underwater robots. I obtained my PhD in Signal Processing from 
+  [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm) and my Master's degree in Computer Vision and Robotics from an Erasmus Mundus 
+  Master Programm called [ViBot](https://www.vibot.org/), awarded by *University of Burgundy*, *University of Girona* and *Heriot-Watt University*. I received my 
+  Bachelor's degree in computer science from [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). During my studies, I have also spent time as a research intern at 
+  [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/) and [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html).
 
   [LinkedIn](https://www.linkedin.com/in/evargasv/) / [Google Scholar](https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en) / 
   [Github](https://github.com/evargasv) / [Twitter](https://twitter.com/elizavargasv) / CV
@@ -36,7 +37,7 @@ about_content: | # this will include new lines to allow paragraphs
 more_title: News
 more_content: | # this will include new lines to allow paragraphs
   - **Feb. 2020:** I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/) to be held in conjunction with ECCV in Glasgow, United Kingdom.
-  - **Jan. 2020:** Our abstract was accepted to [OCEANS](https://singapore20.oceansconference.org/).
+  - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement forUnderwater 3D Mapping in the Challenging Environment* was accepted to [OCEANS](https://singapore20.oceansconference.org/).
   - **Nov. 2019:** I defended my Phd thesis, titled Acoustic Source Localisation in Constrained Environments. Examiners: [Abderrahim Halimi](https://sites.google.com/site/abderrahimhalimi/) (Heriot-Watt University) 
   and [Keith Holland](https://www.southampton.ac.uk/engineering/about/staff/krh.page) (University of Southampton). Slides here.
   - **Oct. 2019:** I participated in the third [ORCA Hub](https://orcahub.org/) demonstrations. Press release [here](https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations).
@@ -61,32 +62,32 @@ projects_content: | # this will include new lines to allow paragraphs
 
   **Conferences**
 
-  - **E. Vargas**, J. R. Hopgood, K. Brown, K. Subr, "A Compressed Encoding Scheme for 
-  Approximate TDOA Estimation", in *European Signal Processing Conference*, **(EUSIPCO)**, 
+  - **E. Vargas**, J. R. Hopgood, K. Brown, K. Subr, A Compressed Encoding Scheme for 
+  Approximate TDOA Estimation, in *European Signal Processing Conference*, **(EUSIPCO)**, 
   Rome, Italy, September 2018. ***(Oral Presentation)***
 
-  - **E. Vargas**, K. Brown, K. Subr, "Impact of Microphone Array Configurations on Robust 
-  Indirect 3D Acoustic Source Localization", in *International Conference on Acoustics, 
+  - **E. Vargas**, K. Brown, K. Subr, Impact of Microphone Array Configurations on Robust 
+  Indirect 3D Acoustic Source Localization, in *International Conference on Acoustics, 
   Speech and Signal Processing* **(ICASSP)**, Calgary, Canada, April 2018. 
   ***(Oral Presentation)***
 
-  - C. Bustos, **E. Vargas**, M. Trujillo, "Classifying Estimated Stereo Correspondences 
-  based on Delaunay Triangulation", in *IberoAmerican Congress on Pattern Recognition*, 
+  - C. Bustos, **E. Vargas**, M. Trujillo, Classifying Estimated Stereo Correspondences 
+  based on Delaunay Triangulation, in *IberoAmerican Congress on Pattern Recognition*, 
   **(CIARP)**, Lima, Peru, November 2016. 
 
-  - **E. Vargas**, M. Trujillo, "A Corresponding Points Classification Approach by Delaunay 
-  Triangulation", in *Latin American Conference on Networked and Electronic Media*, 
+  - **E. Vargas**, M. Trujillo, A Corresponding Points Classification Approach by Delaunay 
+  Triangulation, in *Latin American Conference on Networked and Electronic Media*, 
   **(LACNEM)**, Santiago, Chile, October 2012.
 
   **Theses**
 
-  - **E. Vargas**, "Acoustic Source Localisation in Constrained Environments", *PhD Thesis*, 
+  - **E. Vargas**, Acoustic Source Localisation in Constrained Environments, *PhD Thesis*, 
   Heriot-Watt University, Edinburgh, United Kingdom, February 2020.
 
-  - **E. Vargas**, "Texture Enhanced Tissue Analysis", *MSc Thesis*, Erasmus Mundus Master 
+  - **E. Vargas**, Texture Enhanced Tissue Analysis, *MSc Thesis*, Erasmus Mundus Master 
   Program in Computer Vision and Robotics (ViBot), Edinburgh, United Kingdom, June 2015.
 
-  - **E. Vargas**, "Classifying Estimated Corresponding Points by Delaunay Triangulation", 
+  - **E. Vargas**, Classifying Estimated Corresponding Points by Delaunay Triangulation, 
   *BSc Thesis*, Universidad del Valle, Cali, Colombia, June 2012.
 
 # Footer
