--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,6 @@ about_content: | # this will include new lines to allow paragraphs
   Bachelor's degree in computer science from [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). During my studies, I have also spent time as a research intern at 
   [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/) and [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html).
 
-
   [LinkedIn](https://www.linkedin.com/in/evargasv/) / [Google Scholar](https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en) / 
   [Github](https://github.com/evargasv) / [Twitter](https://twitter.com/elizavargasv) / CV
 
@@ -40,7 +39,7 @@ more_content: | # this will include new lines to allow paragraphs
   - **Feb. 2020:** I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/) to be held in conjunction with [ECCV](https://eccv2020.eu/) 
   in Glasgow, United Kingdom.
   - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement forUnderwater 3D Mapping in the Challenging Environment* was accepted to [OCEANS](https://singapore20.oceansconference.org/).
-  - **Nov. 2019:** I defended my Phd thesis, titled Acoustic Source Localisation in Constrained Environments. Examiners: [Abderrahim Halimi](https://sites.google.com/site/abderrahimhalimi/) (Heriot-Watt University) 
+  - **Nov. 2019:** I defended my PhD thesis, titled Acoustic Source Localisation in Constrained Environments. Examiners: [Abderrahim Halimi](https://sites.google.com/site/abderrahimhalimi/) (Heriot-Watt University) 
   and [Keith Holland](https://www.southampton.ac.uk/engineering/about/staff/krh.page) (University of Southampton). Slides here.
   - **Oct. 2019:** I participated in the third [ORCA Hub](https://orcahub.org/) demonstrations. Press release [here](https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations).
   - **Jan. 2019:** I joined [ORCA Hub](https://orcahub.org/) as Research Associate.
@@ -50,7 +49,8 @@ experience_title: Timeline
 experience_content: | # this will include new lines to allow paragraphs
 
   - **2019-Now:** *Research Associate.* [ORCA Hub](https://orcahub.org/).
-  - **2015-2019:** *PhD Signal Processing.* Heriot-Watt University. Advisors: Keith Brown and Kartic Subr.  
+  - **2015-2019:** *PhD Signal Processing.* [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm). Advisors: 
+  Keith Brown and Kartic Subr.  
   - **2013-2015:** *MSc Computer Vision and Robotics.* Erasmus Mundus Master Program in Computer Vision and Robotics (ViBot). Advisor: Keith Goatman.
   - **Summer 2015:** *Research Intern.* Toshiba Medical Visualization Systems. Advisor: Corne Hoogendoorn.
   - **2006-2012:** *BSc in Computer Science.* Universidad del Valle. Advisor: Maria Trujillo.
